# StableHacks

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
backend/prisma/: schema.prisma  seed.ts
backend/scripts/: sas-revoke.ts  sas-setup.ts
backend/src/: app.module.ts  main.ts
backend/src/admin-auth/: admin-auth.controller.ts  admin-auth.module.ts  admin-auth.service.ts  mock-entra.service.ts
backend/src/auth/: roles.guard.ts
backend/src/common/: logging.interceptor.ts
backend/src/compliance-layer/: compliance-layer.controller.ts  compliance-layer.module.ts  compliance-layer.service.ts
backend/src/consent/: consent.controller.ts  consent.module.ts  consent.service.ts
backend/src/credentials/: credentials.controller.ts  credentials.module.ts  credentials.service.ts
backend/src/events/: events.controller.ts  events.service.ts
backend/src/finstar/: finstar.controller.ts  finstar.module.ts  finstar.service.ts
backend/src/health/: health.controller.ts
backend/src/operations/: operations.controller.ts  operations.service.ts
backend/src/prisma/: prisma.service.ts
backend/src/providers/: providers.controller.ts  providers.service.ts
backend/src/reports/: reports.controller.ts  reports.service.ts
backend/src/sas/: sas.config.ts  sas.module.ts  sas.service.ts
backend/src/solstice/: solstice.controller.ts  solstice.module.ts  solstice.service.ts
backend/src/strategies/: strategies.controller.ts  strategies.module.ts  (+1 more)
contracts/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
contracts/programs/amina-vault/: Cargo.toml
contracts/programs/amina-vault/src/: lib.rs
contracts/programs/mock-finstar/: Cargo.toml
contracts/programs/mock-finstar/src/: lib.rs
contracts/programs/mock-jurisdiction-engine/: Cargo.toml
contracts/programs/mock-jurisdiction-engine/src/: lib.rs
contracts/programs/mock-mesh/: Cargo.toml
contracts/programs/mock-mesh/src/: lib.rs
contracts/programs/mock-notabene/: Cargo.toml
contracts/programs/mock-notabene/src/: lib.rs
contracts/programs/mock-translation-layer/: Cargo.toml
contracts/programs/mock-translation-layer/src/: lib.rs
contracts/scripts/: helpers.ts  seed-all.ts  seed-finstar.ts  seed-jurisdictions.ts  seed-mesh.ts  seed-notabene.ts  seed-translation-layer.ts
contracts/tests/: buffer.test.ts
docs/: entra-id-integration-guide.md
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
(+58 files in other folders)
