[workspace]
resolver = "2"
members = [
    "programs/amina-vault",
    "programs/mock-finstar",
    "programs/mock-notabene",
    "programs/mock-mesh",
    "programs/mock-jurisdiction-engine",
    "programs/mock-translation-layer",
]

[profile.release]
overflow-checks = true
lto = false
codegen-units = 16

[patch.crates-io]
