[package]
name = "mock-jurisdiction-engine"
version = "0.1.0"
description = "Mock Jurisdiction Engine — Multi-jurisdiction regulatory rules"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_jurisdiction_engine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
