[package]
name = "mock-mesh"
version = "0.1.0"
description = "Mock Mesh — Crypto venue connectivity and routing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_mesh"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
