[package]
name = "mock-notabene"
version = "0.1.0"
description = "Mock Notabene — Travel Rule compliance checks"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_notabene"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
