[package]
name = "mock-translation-layer"
version = "0.1.0"
description = "Mock Translation Layer — AMINA's Layer 2 instruction router and CPI orchestrator"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_translation_layer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
mock-finstar = { path = "../mock-finstar", features = ["cpi"] }
mock-notabene = { path = "../mock-notabene", features = ["cpi"] }
mock-mesh = { path = "../mock-mesh", features = ["cpi"] }
mock-jurisdiction-engine = { path = "../mock-jurisdiction-engine", features = ["cpi"] }
